Add Google Search Console verification tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="部屋の壁の高さ・幅と、壁紙のリピート幅（タテ）を入力するだけで、必要な壁紙のメートル数を自動計算。柄合わせ（リピート）によるロス分も考慮した正確な数値が出せます。DIY・セルフリフォーム用。">
     <meta name="keywords" content="壁紙,計算,m数,クロス,リピート,柄合わせ,必要量,シミュレーション">
-    <meta name="google-site-verification" content="ここにサチコのタグを入れる" />
+    <meta name="google-site-verification" content="ICWadNm1UEY-5aRTBxc256vuceTrpLu27thxOlF7GGw" />
 
     <meta property="og:title" content="壁紙必要ｍ数・リピート計算ツール">
     <meta property="og:description" content="柄物の壁紙も失敗しない！リピートを考慮した必要メートル数を一発計算。">
