Add privacy policy, disclaimer, and contact footer

--- a/index.html
+++ b/index.html
@@ -240,6 +240,41 @@
             margin-top: 20px;
             text-align: right;
         }
+
+        .site-footer {
+            margin-top: 40px;
+            padding-top: 25px;
+            border-top: 1px solid #ddd;
+        }
+
+        .footer-section {
+            margin-bottom: 20px;
+        }
+
+        .footer-section h4 {
+            font-size: 13px;
+            font-weight: bold;
+            margin-bottom: 8px;
+            color: #555;
+        }
+
+        .footer-section p {
+            font-size: 11px;
+            line-height: 1.7;
+            color: #888;
+            margin: 0 0 5px 0;
+        }
+
+        .footer-section a {
+            color: #4a90d9;
+        }
+
+        .copyright {
+            font-size: 10px;
+            text-align: center;
+            color: #aaa;
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -296,6 +331,24 @@
             ※切りしろ10cm、有効幅92cmで計算しています。<br>
             ※計算結果は目安です。施工環境により変動します。
         </p>
+
+        <footer class="site-footer">
+            <div class="footer-section">
+                <h4>プライバシーポリシー</h4>
+                <p>当サイトでは、Googleアナリティクス等のアクセス解析ツールを使用しています。これらのツールはCookieを使用してデータを収集しますが、個人を特定する情報は含まれません。</p>
+            </div>
+            <div class="footer-section">
+                <h4>免責事項</h4>
+                <p>当サイトの計算結果は参考値であり、実際の使用状況により異なる場合があります。当サイトを利用したことによる損害について、運営者は一切の責任を負いません。</p>
+                <p>当サイトはAmazonアソシエイトプログラムに参加しています。</p>
+            </div>
+            <div class="footer-section">
+                <h4>運営者情報</h4>
+                <p>運営者: LJO<br>
+                    お問い合わせ: <a href="mailto:lstar.ojousama@gmail.com">lstar.ojousama@gmail.com</a></p>
+            </div>
+            <p class="copyright">© 2026 LJO. All rights reserved.</p>
+        </footer>
     </div>
 
     <script>
