Add Rakuten affiliate link and widget

--- a/index.html
+++ b/index.html
@@ -323,11 +323,19 @@
                 </small>
             </div>
 
-            <div style="margin-top:20px;">
-                <a href="https://search.rakuten.co.jp/search/mall/壁紙+のり付き/" target="_blank"
-                    class="shop-link rakuten">楽天市場で探す</a>
-                <a href="https://www.amazon.co.jp/s?k=壁紙+のり付き&tag=YOUR_ID" target="_blank"
-                    class="shop-link amazon">Amazonで探す</a>
+            <div style="margin-top:20px; display:flex; gap:10px; flex-wrap:wrap;">
+                <a href="https://www.amazon.co.jp/s?k=壁紙+のり付き&tag=ljooj-22" target="_blank" class="shop-link amazon"
+                    style="flex:1; background:#ff9800; padding:12px; border-radius:6px; color:#fff; text-decoration:none; text-align:center; font-weight:bold;">🛒
+                    Amazonで探す</a>
+                <a href="https://af.moshimo.com/af/c/click?a_id=5329664&p_id=54&pc_id=54&pl_id=616&url=https%3A%2F%2Fsearch.rakuten.co.jp%2Fsearch%2Fmall%2F%25E5%25A3%2581%25E7%25B4%2599%2F"
+                    target="_blank" class="shop-link rakuten"
+                    style="flex:1; background:#bf0000; padding:12px; border-radius:6px; color:#fff; text-decoration:none; text-align:center; font-weight:bold;">🛒
+                    楽天で探す</a>
+            </div>
+            <div style="margin-top:15px; text-align:center;">
+                <script
+                    type="text/javascript">MafRakutenWidgetParam = function () { return { size: '468x160', design: 'slide', recommend: 'on', auto_mode: 'on', a_id: '5329664', border: 'off' }; };</script>
+                <script type="text/javascript" src="//image.moshimo.com/static/publish/af/rakuten/widget.js"></script>
             </div>
         </div>
 
