Add Rakuten motion widget with affiliate ID

--- a/index.html
+++ b/index.html
@@ -328,6 +328,13 @@
                     style="background:#bf0000; padding:12px; border-radius:6px; color:#fff; text-decoration:none; text-align:center; font-weight:bold; display:block;">
                     🛒 楽天で壁紙を探す
                 </a>
+                <!-- 楽天モーションウィジェット -->
+                <div style="margin-top:15px; text-align:center;">
+                    <script
+                        type="text/javascript">rakuten_design = "slide"; rakuten_affiliateId = "4fd02721.a31db14b.4fd02722.31c47eaa"; rakuten_items = "ctsmatch"; rakuten_genreId = "0"; rakuten_size = "468x160"; rakuten_target = "_blank"; rakuten_theme = "gray"; rakuten_border = "off"; rakuten_auto_mode = "on"; rakuten_genre_title = "off"; rakuten_recommend = "on"; rakuten_ts = "1767772677404";</script>
+                    <script type="text/javascript"
+                        src="https://xml.affiliate.rakuten.co.jp/widget/js/rakuten_widget.js?20230106"></script>
+                </div>
             </div>
         </div>
 
